fixed error with edit spacing on deployment

--- a/src/userprofile.scss
+++ b/src/userprofile.scss
@@ -1,3 +1,7 @@
+p.edit {
+  margin: 0;
+}
+
 .your-profile {
   margin: 0.5rem 0 1rem 0;
   padding: 0;
@@ -21,6 +25,7 @@
 
 .user-edit {
   display: flex;
+  padding-bottom: 1rem;
 }
 
 .user-edit p {
